# CAN-ESP

./: .gitignore  README.md
common_components/can_esp_lib/: CMakeLists.txt  idf_component.yml
common_components/can_esp_lib/examples/can_esp_lib_self_test/: CMakeLists.txt
common_components/can_esp_lib/include/: can_esp_lib.h
common_components/can_esp_lib/src/: can_esp_lib.c
common_components/connection_module/: idf_component.yml
common_components/connection_module/include/: esp_mesh_connection_module.h  mqtt_connection_module.h  routing_module.h  wifi_connection_module.h
common_components/connection_module/src/: esp_mesh_connection_module.c  mqtt_connection_module.c  routing_module.c  wifi_connection_module.c
common_components/ota_module/: idf_component.yml
common_components/ota_module/include/: ota_module.h
common_components/ota_module/src/: ota_module.c
ecus/common_components/sd_storage_module/: CMakeLists.txt  idf_component.yml
ecus/common_components/sd_storage_module/include/: sd_storage_module.h
ecus/common_components/sd_storage_module/src/: sd_storage_module.c
ecus/monitor_ecu/: CMakeLists.txt
ecus/monitor_ecu/components/alert_module/: CMakeLists.txt
ecus/monitor_ecu/components/diagnosis_module/: CMakeLists.txt  idf_component.yml
ecus/monitor_ecu/components/logger_module/: CMakeLists.txt
ecus/monitor_ecu/main/: CMakeLists.txt
ecus/monitor_ecu/main/include/: monitor_ecu.h
ecus/monitor_ecu/main/src/: monitor_ecu.c  monitor_ecu_testes.c
ecus/motor_control_ecu/: CMakeLists.txt
ecus/motor_control_ecu/main/src/: motor_control_ecu.c
(+11 files in other folders)
